@@ -1,3 +1,9 @@
+2005-03-31  Nate Nielsen  <nielsen@memberwebs.com> 
+
+    * src/seahorse-key-manager-store.c: 
+    * src/seahorse-preferences.c: Remove the 'Length' column from the main 
+    key manager display. Still available in Key Properties. 
+    
 2005-03-30  Nate Nielsen <nielsen@memberwebs.com>
     
     * src/Makefile.am: 
